# Cairn

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: architecture.md  configuration.md  limitations.md  walkthrough.md
evals/scenarios/: 01_architecture_debate.yaml  02_product_strategy.yaml  03_open_ideation.yaml  04_multi_reference.yaml  05_mixed_fact_reasoning.yaml  06_territory_switching.yaml
examples/: agent_loop.py
hooks/: hooks.json
scripts/: bootstrap.sh  hook_ingest.py  hook_orient.py  run-mcp.sh  run_evals.py  validate_scenarios.py
src/cairn/: __init__.py  _engine_registry.py  cli.py  config.py  mcp_server.py
src/cairn/integrations/: anthropic.py
src/cairn/memory/: engine.py
src/cairn/models/: events.py  graph_types.py  workspace.py
src/cairn/pipeline/: classifier.py  embedding_store.py  mutator.py  renderer.py  resolver.py
src/cairn/prompts/: classifier.txt  renderer.txt
src/cairn/utils/: embedding_providers.py  graph_export.py  merge_detector.py  metrics.py  vector_index.py
tests/: conftest.py  test_cli.py  test_embedding_providers.py  test_embedding_store.py  test_engine.py  test_event_log.py  test_graph.py  test_integration.py  test_mcp_server.py  test_mutator.py  test_pipeline.py  test_resolver.py  test_sdk_wrapper.py  test_territory_signal.py  test_vector_index.py  test_workspace.py  test_workspace_routing.py
tests/integration/: conftest.py  test_agent_loop.py  test_sdk_e2e.py
tests/integration/external_project/: conversation_loader.py  test_mcp_path.py  (+1 more)
(+7 files in other folders)
